k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-q
  labels:
    app: api-q
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-q
  template:
    metadata:
      labels:
        app: api-q
    spec:
      containers:
        - name: api-q
          image: #{API_TAG}#
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 50Mi
              cpu: 100m
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api-q
  labels:
    app: api-q
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: api-q
---
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: api-q
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kb-beta-api.openarabic.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: api-q
              servicePort: 8080
