k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: koranensbudskap
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: #{FRONTEND_TAG}#
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 50Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  namespace: koranensbudskap
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - port: 8100
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-q
  namespace: koranensbudskap
spec:
  routes:
    - kind: Rule
      match: Host(`kb-beta-frontend.openarabic.io`)
      services:
        - kind: Service
          name: frontend-q
          namespace: koranensbudskap
          passHostHeader: true
          responseForwarding:
            flushInterval: 1ms
          port: 8100
